Transform UI to neobrutalism style with neon grey and white theme

--- a/app.json
+++ b/app.json
@@ -20,13 +20,19 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.srivatsajoshi2005.vocabree"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-secure-store"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "7a3bdf45-d48c-494c-b9ac-1652fa311a47"
+      }
+    }
   }
 }
