--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.23",
     "expo-av": "~16.0.7",
+    "expo-camera": "~17.0.9",
+    "expo-clipboard": "~8.0.7",
     "expo-file-system": "~19.0.17",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-secure-store": "~15.0.7",
     "expo-speech": "~14.0.7",
     "expo-status-bar": "~3.0.8",
